[gd_scene load_steps=6 format=3 uid="uid://cjyrwp7xgijvk"]

[ext_resource type="Script" path="res://scenes/item/actions/base/projectile.gd" id="1_mxfsa"]
[ext_resource type="Texture2D" uid="uid://ckyftvk7stajr" path="res://tress/at_ability_homemade_projectile.tres" id="2_b2g07"]
[ext_resource type="Script" path="res://scenes/utility/hit_box.gd" id="3_uqdo5"]
[ext_resource type="AudioStream" uid="uid://cah7725fquumu" path="res://assets/sounds/homemade_projectile.mp3" id="4_dd5tm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvgei"]
size = Vector2(26, 26)

[node name="Projectile" type="Node2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_mxfsa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b2g07")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 129
script = ExtResource("3_uqdo5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gvgei")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dd5tm")
volume_db = -12.0

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
